# libsinv

./: CMakeLists.txt
include/: CSI.h  HuInvariants.h
src/: CSI.cpp  HuInvariants.cpp
